<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.viceboy.circularrevealdrawer.widget.CircularRevealDrawer
        android:id="@+id/crdMenu"
        app:hamburgerColor="@color/colorPrimaryDark"
        app:menuTextArray="@array/menuItems"
        android:textSize="16sp"
        app:username="Alexander"
        app:userEmail="alex@redmail.com"
        app:profileImg="@drawable/avatar_sample"
        app:innerCircularColor="@color/colorPrimary"
        app:outerCircularColor="@color/colorPrimaryDark"
        app:menuTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="72dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="56dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTripHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/trip_summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_mat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_card"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tvTripHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPlace"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/place_test" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:padding="2dp"
                    android:text="@string/par_nyc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="2dp"
                    android:text="@string/_4_000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvFlightDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/flight_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/card_mat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/hotel_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintTop_toBottomOf="@id/card_mat" />

    <ImageView
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/layer_oval"
        android:contentDescription="@null"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tvFlightDetails" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/dots" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/_4_000"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/dots" />

    <TextView
        android:id="@+id/tvDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/voces_regular"
        android:text="@string/departure"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tvPrice" />

    <TextView
        android:id="@+id/tvEditInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/edit_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintTop_toBottomOf="@id/tvPrice" />

    <ImageView
        android:id="@+id/ivCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tvDeparture" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/dashed_vertical"
        app:layout_constraintEnd_toEndOf="@+id/ivCalendar"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/ivCalendar" />

    <ImageView
        android:id="@+id/ivFlight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@null"
        android:rotation="180"
        android:src="@drawable/ic_baseline_flight_24"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="148dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/dashed_vertical"
        app:layout_constraintEnd_toEndOf="@+id/ivCalendar"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/ivFlight1" />

    <ImageView
        android:id="@+id/ivFlight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@null"
        android:rotation="180"
        android:src="@drawable/ic_baseline_flight_24"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <TextView
        android:id="@+id/tvTime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:lineSpacingExtra="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/_6_25_am_n7_50_am"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/ivFlight1"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/tvLoc1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_thin"
        android:lineSpacingExtra="14dp"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:paddingEnd="4dp"
        android:text="@string/paris_cdg_nmunich_muc"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvTime1"
        app:layout_constraintStart_toEndOf="@id/tvTime1"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ1"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/bg_oval"
        android:src="@drawable/img_bird"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoc1"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/tvLoc1"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <View
        android:id="@+id/viewHor1"
        android:layout_width="92dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/dashed_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tvTime1" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg_rect"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/_4h_20m"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/viewHor1"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@id/viewHor1"
        app:layout_constraintTop_toBottomOf="@id/tvTime1" />

    <View
        android:id="@+id/viewHor2"
        android:layout_width="92dp"
        android:layout_height="0dp"
        android:background="@drawable/dashed_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/viewHor1"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/tvDuration"
        app:layout_constraintTop_toBottomOf="@id/tvTime1" />

    <TextView
        android:id="@+id/tvTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:lineSpacingExtra="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/_12_10_am_n9_15_am"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/ivFlight2"
        app:layout_constraintTop_toBottomOf="@id/viewHor1" />

    <TextView
        android:id="@+id/tvLoc2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_thin"
        android:lineSpacingExtra="14dp"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:paddingEnd="4dp"
        android:text="@string/nmunich_muc"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvTime2"
        app:layout_constraintStart_toEndOf="@id/tvTime2"
        app:layout_constraintTop_toBottomOf="@id/viewHor1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ2"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/bg_oval"
        android:src="@drawable/img_bird"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoc2"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/tvLoc2"
        app:layout_constraintTop_toBottomOf="@id/viewHor2" />
</androidx.constraintlayout.widget.ConstraintLayout>